[package]
name = "falcon_rust"
version = "0.1.0"
authors = ["Jordan Rhodes <jrhodes@exzeo.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "falcon_rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
chrono = { version = "0.4.22", default_feartures = false, features = ["clock"] }
config = { version = "0.13" }
serde = { version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"