[package]
name = "falcon_rust"
version = "0.1.0"
authors = ["Jordan Rhodes <jrhodes@exzeo.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "falcon_rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
actix-web = { version = "4" }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13" }
serde = { version = "1" }
serde-aux = { version = "4" }
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = { version = "0.7" }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = { version = "1" }
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.16" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
